# esp32-app-framework

./: .clangd  .gitignore  CMakeLists.txt  LICENCE  README.md  libs.txt  partitions.csv
components/common/: CMakeLists.txt
components/core_api/: CMakeLists.txt  CredentialApiHandler.cpp  ProvisioningApiHandler.cpp  WiFiApiHandler.cpp
components/credential_store/: CMakeLists.txt  CredentialApiHandler.cpp  CredentialStore.cpp  CredentialStore.hpp
components/device/: CMakeLists.txt  DeferredExecutor.cpp  DeviceApiHandler.cpp
components/embedded_files/: CMakeLists.txt  EmbeddedFileTable.cpp
components/embedded_files/assets/: provision_index.html
components/embedded_files/files/: common_api.js  common_state.js  common_styles.css  common_ui.js  common_validation.js  provision_app.js  provision_ui.js  (+2 more)
components/esp_adapter/: CMakeLists.txt
components/framework/: CMakeLists.txt  FrameworkContext.cpp
components/http/: CMakeLists.txt  HttpRequest.cpp  HttpServer.cpp
components/static_assets/: CMakeLists.txt  EmbeddedAssetTable.cpp  StaticFileHandler.cpp
components/static_assets/assets/: app.js  common_api.js  common_modal.js  index.html  runtime_app.js  runtime_index.html
components/static_assets/include/static_assets/: EmbeddedAssetTable.hpp  StaticFileHandler.hpp
components/wifi_manager/: CMakeLists.txt  ProvisioningServer.cpp  ProvisioningServer.hpp  ProvisioningState.hpp  ProvisioningStateMachine.cpp  RuntimeServer.cpp  RuntimeServer.hpp  WiFiApiHandler.cpp  WiFiContext.hpp  WiFiHelper.cpp  WiFiInterface.cpp  WiFiManager.cpp  WiFiManager.hpp  WiFiState.hpp  WiFiStateMachine.cpp  WiFiTypes.cpp
components/wifi_manager/include/wifi_manager/: ProvisioningServer.hpp  RuntimeServer.hpp  WiFiApiHandler.hpp  WiFiContext.hpp  WiFiHelper.hpp  WiFiInterface.hpp  WiFiStateMachine.hpp  WiFiTypes.hpp
components/wifi_types/: CMakeLists.txt  WiFiTypes.cpp
docs/: Import to new Espressif IDE workspace.md  flash_layout.md  url_plan.md
main/: ApplicationContext.cpp  ApplicationContext.hpp  CMakeLists.txt  CredentialApiHandler.cpp  CredentialApiHandler.hpp  CredentialStore.cpp  CredentialStore.hpp  EmbeddedFiles.cpp  EmbeddedFiles.hpp  EmbeddedFilesRegister.cpp  ProvisioningApiHandler.cpp  ProvisioningApiHandler.hpp  ProvisioningServer.cpp  ProvisioningServer.hpp  RuntimeServer.cpp  RuntimeServer.hpp  WiFiApiHandler.cpp  WiFiApiHandler.hpp  WiFiManager.cpp  WiFiManager.hpp  app_main.cpp  idf_component.yml  serveEmbedded.cpp  serveEmbedded.hpp
main/ui/provision/: index.html  provision.js  tailwind.css
troubled/: HttpServer.cpp
(+18 files in other folders)
