idf_component_register(
    SRCS
        ProvisioningServer.cpp
        RuntimeServer.cpp
        WiFiInterface.cpp
        WiFiStateMachine.cpp
        WiFiTypes.cpp
    INCLUDE_DIRS
        include
        ../static_assets/include
   REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_timer
        cjson
        credential_store
        core_api        
        wifi_manager
        http
        static_assets
        framework
        
)
