idf_component_register(
    SRCS
        ProvisioningServer.cpp
        RuntimeServer.cpp
        WiFiApiHandler.cpp
        WiFiInterface.cpp
        WiFiStateMachine.cpp
        WiFiTypes.cpp
    INCLUDE_DIRS
        include
   REQUIRES
        esp_wifi
        esp_event
        esp_netif
        nvs_flash
        esp_timer
        cjson
        common
        credential_store
        http
        static_assets
)
